# game-engine

./: .clang-tidy  .gitignore  00_MUN_COMPLETION_NOTICE.md  ANGELSCRIPT_COMPLETION_SUMMARY.md  ANGELSCRIPT_DELIVERY_CHECKLIST.md  ANGELSCRIPT_EXAMPLES.md  ANGELSCRIPT_INDEX.md  ANGELSCRIPT_INTEGRATION_GUIDE.md  ANGELSCRIPT_QUICK_REFERENCE.md  ARCHITECTURE_DIAGRAM.md  ASSET_PIPELINE_CHANGES.md  ASSET_PIPELINE_DELIVERY.md  ASSET_PIPELINE_GUIDE.md  ASSET_PIPELINE_INDEX.md  ASSET_PIPELINE_QUICK_REF.md  AUDIO_DELIVERY_CHECKLIST.md  AUDIO_IMPLEMENTATION_SUMMARY.md  AUDIO_INDEX.md  AUDIO_SYSTEM_QUICK_REFERENCE.md  AssetPipelineIntegrationExample.h  BUILD_WITH_ASSETS.md  CHARACTER_CONTROLLER_SUMMARY.md  CHECKLIST.md  CI_QUICK_START.md  CMakeLists.txt  CMakePresets.json  COLLISION_QUERY_DELIVERY.md  COLLISION_QUERY_FILE_MANIFEST.md  COLLISION_QUERY_GUIDE.md  COLLISION_QUERY_INDEX.md  COLLISION_QUERY_QUICK_REF.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Doxyfile  ECS_IMPLEMENTATION_SUMMARY.md  ECS_INDEX.md  FILE_MANIFEST.md  GDSCRIPT_IMPLEMENTATION_SUMMARY.md  GDSCRIPT_INDEX.md  (+165 more)
.github/: copilot-instructions.md
assets/: brick.ppm  environment.hdr  scene.txt
cmake/: FindMono.cmake  WasmSupport.cmake
docker/: Dockerfile.master  Dockerfile.worker  docker-compose.yml
docs/: API_OVERVIEW.md  AUDIO_MIXER_SPATIALIZATION_GUIDE.md  AnimationEvents.md  BUILD_PRESETS_PACKAGING.md  BandwidthOptimization.md  CloudDeployment.md  CloudSDKIntegration.md  DOCUMENTATION_GUIDE.md  ECS_EXAMPLES.cpp  ECS_GUIDE.md  ECS_IMPLEMENTATION_COMPLETE.md  ECS_QUICK_REFERENCE.md  FaultTolerance.md  HOT_RELOAD_EXAMPLES.cpp  HOT_RELOAD_GUIDE.md  HOT_RELOAD_QUICK_REFERENCE.md  HierarchicalDistribution.md  LoadBalancing.md  MasterFailover.md  MessageAcknowledgments.md  PACKAGING_QUICK_REFERENCE.md  PHYSICS_EXAMPLES.cpp  PHYSICS_INTEGRATION_GUIDE.md  PHYSX_INTEGRATION_GUIDE.md  PROFILING_IMPLEMENTATION_SUMMARY.md  PROFILING_INTEGRATION_CHECKLIST.md  PROFILING_QUICK_REFERENCE.md  PROFILING_README.md  PROFILING_TELEMETRY_GUIDE.md  ProductionChecklist.md  RESOURCE_STREAMING_ARCHITECTURE.md  RESOURCE_STREAMING_GUIDE.md  RESOURCE_STREAMING_QUICK_REFERENCE.md  RESOURCE_STREAMING_README.md  ResourceStreamingExamples.cpp  RetryLogic.md  StateSynchronization.md  TESTING_CI_GUIDE.md  TestingDeployment.md  WorkerRegistration.md  (+2 more)
examples/: CompressionExample.cpp  CornellBoxProbeTest.cpp  CubicInterpolationExample.cpp  DeformationRecordingExample.cpp  FluidSimulationExample.cpp  FractureLinesExample.cpp  PartialTearingExample.cpp  PlasticityExample.cpp  ProceduralTearingExample.cpp  SoftBodyExample.cpp  SoftBodyTearingExample.cpp  TearHealingExample.cpp  TearPatternsExample.cpp  VariableResistanceExample.cpp
game-engine-multiplayer/: CMakeLists.txt  README.md
game-engine-multiplayer/examples/dedicated_server/: main.cpp
game-engine-multiplayer/examples/local_client/: main.cpp
game-engine-multiplayer/include/: Client.hpp  ClientPrediction.hpp  Message.hpp  MultiplayerManager.hpp  NetEntityId.hpp  NetworkDebugPanel.hpp  NetworkManager.hpp  NetworkTransform.hpp  Peer.hpp  Protocol.hpp  RPC.hpp  ReplicationManager.hpp  Server.hpp
game-engine-multiplayer/include/serialization/: Serializer.hpp
game-engine-multiplayer/src/: Client.cpp  ClientPrediction.cpp  Message.cpp  MultiplayerManager.cpp  NetworkManager.cpp  NetworkTransform.cpp  Peer.cpp  RPC.cpp  ReplicationManager.cpp  Server.cpp  main.cpp
game-engine-multiplayer/src/serialization/: Serializer.cpp
game-engine-multiplayer/tests/: NetworkTests.cpp
include/: AdaptiveQualityController.h  AdaptiveQualityIntegration.h  AngelScriptSystem.h  Animation.h  AnimationStateMachine.h  Animator.h  AnisotropicMaterial.h  Application.h  AssetBrowser.h  AssetConverter.h  AssetDatabase.h  AssetHash.h  AssetHotReloadManager.h  AssetPackage.h  AssetPipeline.h  AssetThumbnailGenerator.h  AsyncClothFactory.h  AsyncCollisionDetector.h  AudioListener.h  AudioMixer.h  AudioOcclusion.h  AudioSource.h  AudioSpatializer.h  AudioSurface.h  AudioSystem.h  BlendCurve.h  BlendTree.h  BlendTreeEditor.h  Bone.h  BoneMask.h  Box2DBackend.h  Box2DCharacterController.h  Box2DJoint.h  Box2DRigidBody.h  Box2DShape.h  BulletBackend.h  Bytecode.h  CSharpScriptSystem.h  Camera.h  CascadedShadowMap.h  (+227 more)
k8s/: master-deployment.yaml  worker-deployment.yaml
proto/: distributed_physics.proto
scripts/: create-portable-bundle-windows.sh  create-portable-bundle.sh  deploy-aws.sh  example_go_systems.go  gameplay.mun  master-userdata.sh  package.bat  package.ps1  ragdoll_gym_env.py  worker-userdata.sh
shaders/: basic.vert  billboard.frag  billboard.vert  bitonic_sort.comp  bloom_blend.frag  bloom_extract.frag  blur.frag  brdf.frag  cloth.frag  cloth.vert  cloth_common.glsl  cone_trace.frag  crack.frag  crack.vert  ddgi_border.comp  ddgi_common.glsl  ddgi_raytrace.comp  ddgi_update.comp  decal.frag  decal.vert  deferred_lighting.comp  depth.frag  depth.vert  equirectangular_to_cubemap.frag  fluid_depth.frag  fluid_depth.vert  fluid_normal.frag  fluid_quad.vert  fluid_shading.frag  fluid_smooth.frag  fluid_thickness.frag  fluid_thickness.vert  foam.frag  foam.vert  geometry_pass.frag  geometry_pass.vert  gizmo.frag  gizmo.vert  gpu_cull_frustum.comp  gpu_cull_occlusion.comp  (+52 more)
src/: AdaptiveQualityController.cpp  AdaptiveQualityIntegration.cpp  AggregateDemo.cpp  AngelScriptSystem.cpp  Animation.cpp  AnimationStateMachine.cpp  Animator.cpp  AnisotropicMaterial.cpp  Application.cpp  AssetBrowser.cpp  AssetConverter.cpp  AssetDatabase.cpp  AssetHash.cpp  AssetHotReloadManager.cpp  AssetPackage.cpp  AssetPipeline.cpp  AssetThumbnailGenerator.cpp  AsyncClothFactory.cpp  AsyncCollisionDetector.cpp  AudioListener.cpp  AudioMixer.cpp  AudioOcclusion.cpp  AudioSource.cpp  AudioSpatializer.cpp  AudioSystem.cpp  BlendCurve.cpp  BlendTree.cpp  BlendTreeEditor.cpp  Bone.cpp  BoneMask.cpp  Box2DBackend.cpp  Box2DCharacterController.cpp  Box2DJoint.cpp  Box2DRigidBody.cpp  Box2DShape.cpp  BulletBackend.cpp  CSharpScriptSystem.cpp  Camera.cpp  CascadedShadowMap.cpp  ClothAudioSystem.cpp  (+225 more)
tests/: WasmTest.cpp  main.cpp  (+15 more)
(+87 files in other folders)
